Fixed an issue with the play-list-item content causing a scrollbar to appear.

--- a/static/css/player.css
+++ b/static/css/player.css
@@ -122,11 +122,11 @@ a {
 }
 
 #playlist .play-list-item>* {
-	opacity: 0;
+	display: none;
 }
 
 #playlist:hover .play-list-item>*  {
-	opacity: 1;
+	display: block;
 }
 
 #progress-bar {
